feat: tudo chega em 1 email